--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,26 @@
       },
       "envFile": "${workspaceFolder}/EmpModule/.env1",
       "preLaunchTask": "Build EmployeeApp"
+    },
+    {
+      "name": "Run EmployeeApp-EmpModule UI5 Latest",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceFolder}/employeeapp-approuter/node_modules/@sap/html5-repo-mock/index.js",
+      "args": [
+        "--standalone",
+        "/nsEmpModule/test/unit/unitTests.qunit.html",
+        "--ui5",
+        "{\"version\":\".\"}"
+      ],
+      "cwd": "${workspaceFolder}/EmpModule",
+      "env": {
+        "PORT": "6004",
+        "MOCK_LOOKUP_DIRS": "[\"webapp\"]",
+        "run.config": "{\"handlerId\":\"ui5_run_config_handler_id\",\"runnableId\":\"/home/user/projects/EmployeeApp/EmpModule\"}"
+      },
+      "envFile": "${workspaceFolder}/EmpModule/.env2",
+      "preLaunchTask": "Build EmployeeApp"
     }
   ]
 }
