--- a/mta.yaml
+++ b/mta.yaml
@@ -7,6 +7,7 @@ modules:
   path: employeeapp-approuter
   requires:
   - name: EmployeeApp_html_repo_runtime
+  - name: autoscalerspaceb
   - name: dest_EmployeeApp
   parameters:
     disk-quota: 256M
